--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -86,9 +86,7 @@
     "- `'features'` is a 4D array containing raw pixel data of the traffic sign images, (num examples, width, height, channels).\n",
     "- `'labels'` is a 1D array containing the label/class id of the traffic sign. The file `signnames.csv` contains id -> name mappings for each id.\n",
     "- `'sizes'` is a list containing tuples, (width, height) representing the original width and height the image.\n",
-    "- `'coords'` is a list containing tuples, (x1, y1, x2, y2) representing coordinates of a bounding box around the sign in the image. **THESE COORDINATES ASSUME THE ORIGINAL IMAGE. THE PICKLED DATA CONTAINS RESIZED VERSIONS (32 by 32) OF THESE IMAGES**\n",
-    "\n",
-    "Complete the basic data summary below. Use python, numpy and/or pandas methods to calculate the data summary rather than hard coding the results. For example, the [pandas shape method](http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.shape.html) might be useful for calculating some of the summary results. "
+    "- `'coords'` is a list containing tuples, (x1, y1, x2, y2) representing coordinates of a bounding box around the sign in the image. **THESE COORDINATES ASSUME THE ORIGINAL IMAGE. THE PICKLED DATA CONTAINS RESIZED VERSIONS (32 by 32) OF THESE IMAGES**"
    ]
   },
   {
@@ -128,11 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize the German Traffic Signs Dataset using the pickled file(s). This is open ended, suggestions include: plotting traffic sign images, plotting the count of each sign, etc.\n",
-    "\n",
-    "The [Matplotlib](http://matplotlib.org/) [examples](http://matplotlib.org/examples/index.html) and [gallery](http://matplotlib.org/gallery.html) pages are a great resource for doing visualizations in Python.\n",
-    "\n",
-    "**NOTE:** It's recommended you start with something simple first. If you wish to do more, come back to it after you've completed the rest of the sections."
+    "Visualize the German Traffic Signs Dataset using the pickled file(s). This is open ended, suggestions include: plotting traffic sign images, plotting the count of each sign, etc."
    ]
   },
   {
@@ -219,13 +213,6 @@
    "metadata": {},
    "source": [
     "### Pre-process the Data Set (normalization, grayscale, etc.)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use the code cell (or multiple code cells, if necessary) to implement the first step of your project."
    ]
   },
   {
@@ -323,14 +310,13 @@
     "    conv3 = conv2d(conv2, weight_var((5,5,64,128)), bias_var(128)) # Output = 8x8x128.\n",
     "    conv3 = pool(conv3, k=2) # Output = 4x4x128.\n",
     "\n",
-    "    # Layer 4: Flatten Layers & Concat.\n",
-    "    # Note: depending on your TF version, the axis argument for tf.concat changes.\n",
-    "    # TF v1.0.1: tf.concat(values, axis);\n",
+    "    # Layer 4: Flatten, Pool & Concatenate Layers.\n",
+    "    # TensorFlow v1.0.1: tf.concat(values, axis);\n",
     "    try:\n",
     "        flat = tf.concat((flatten(pool(conv1, k=4)),\n",
     "                          flatten(pool(conv2, k=2)),\n",
     "                          flatten(conv3)), 1) # Output 3584.\n",
-    "    # Prior versions: tf.concat(axis, values) :D\n",
+    "    # Prior TF versions: tf.concat(axis, values) :D\n",
     "    except:\n",
     "        flat = tf.concat(1, (flatten(pool(conv1, k=4)),\n",
     "                          flatten(pool(conv2, k=2)),\n",
@@ -497,11 +483,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Step 3: Test a Model on New Images\n",
-    "\n",
-    "To give yourself more insight into how your model is working, download at least five pictures of German traffic signs from the web and use your model to predict the traffic sign type.\n",
-    "\n",
-    "You may find `signnames.csv` useful as it contains mappings from the class id (integer) to the actual sign name."
+    "## Step 3: Test a Model on New Images"
    ]
   },
   {
