add decaying learning rate

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -297,7 +297,7 @@
    "source": [
     "keep_prob = tf.placeholder(tf.float32)\n",
     "\n",
-    "def LeNet(x):\n",
+    "def Model(x):\n",
     "    # Layer 1: Convolutional. Input = 32x32x1.\n",
     "    conv1 = conv2d(x, weight_var((5,5,1,32)), bias_var(32)) # Output = 32x32x32.\n",
     "    conv1 = pool(conv1, k=2) # Output = 16x16x32.\n",
@@ -381,11 +381,17 @@
    },
    "outputs": [],
    "source": [
-    "rate = 0.0005\n",
-    "logits = LeNet(x)\n",
+    "initial_learn_rate = 0.001\n",
+    "global_step = tf.Variable(0, trainable=False)\n",
+    "decay_steps = 10\n",
+    "decay_rate = 0.75\n",
+    "learning_rate = tf.train.exponential_decay(initial_learn_rate, global_step,\n",
+    "                                           decay_steps, decay_rate, staircase=True)\n",
+    "\n",
+    "logits = Model(x)\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=one_hot_y)\n",
     "loss_operation = tf.reduce_mean(cross_entropy)\n",
-    "optimizer = tf.train.AdamOptimizer(learning_rate=rate)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
     "training_operation = optimizer.minimize(loss_operation)"
    ]
   },
