--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -327,7 +327,7 @@
     "    fc1 = fc(flat, weight_var((3584,1024)), bias_var(1024)) # Output = 1024.\n",
     "    fc1 = tf.nn.dropout(fc1, keep_prob=keep_prob)\n",
     "\n",
-    "    # Layer 6: Out\n",
+    "    # Layer 6: Fully Connected. Out.\n",
     "    return fc(fc1, weight_var((1024,43)), bias_var(43), activate_layer=False) # Output = 43."
    ]
   },
