--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -163,12 +163,12 @@
     "def visualize_class(X_data, y_labels=[],\n",
     "                    rows=1, cols=12, maxtitlelen=18, figsize=(15,2)):\n",
     "    \"\"\"\n",
-    "    Convenience method to visuaize grides of images. If a set of corresponding\n",
+    "    Convenience method to visualize sets of images. If a set of corresponding\n",
     "    class labels is passed, they will be printed along with the image.\n",
     "    \"\"\"\n",
     "    has_labels = len(y_labels) > 0\n",
-    "    assert not has_labels or len(X_data) == len(y_labels), \\\n",
-    "        \"Number of X values must match number of y labels!\"\n",
+    "    assert not has_labels or len(X_data) == len(y_labels)\n",
+    "\n",
     "    plt.figure(figsize=figsize)\n",
     "    for i, img in enumerate(X_data):\n",
     "        plt.subplot(rows, cols, i+1, xticks=[], yticks=[])\n",
@@ -242,6 +242,7 @@
     "    \"\"\"\n",
     "    out = np.empty(images.shape[:3], dtype=np.float32)\n",
     "    for idx in range(out.shape[0]):\n",
+    "#         out[idx] = cv2.Laplacian(cv2.cvtColor(images[idx], cv2.COLOR_RGB2GRAY), cv2.CV_32F)\n",
     "        out[idx] = cv2.equalizeHist(cv2.cvtColor(images[idx], cv2.COLOR_RGB2GRAY))\n",
     "        out[idx] = cv2.normalize(out[idx], out[idx], alpha=-0.5, beta=0.5,\n",
     "                                 norm_type=cv2.NORM_MINMAX, dtype=cv2.CV_32F)\n",
@@ -272,7 +273,7 @@
    "source": [
     "rand_indices = np.random.choice(n_classes, size=3)\n",
     "for index in rand_indices:\n",
-    "    subset_process = X_train_process[y_train==index]\n",
+    "    subset_process = X_train_process[y_train_process==index]\n",
     "    subset_process = subset_process[np.random.choice(subset_process.shape[0], size=12)]\n",
     "    visualize_class(subset_process.reshape(subset_process.shape[:3]))"
    ]
@@ -297,7 +298,7 @@
     "import tensorflow as tf\n",
     "from tensorflow.contrib.layers import flatten\n",
     "\n",
-    "EPOCHS = 70\n",
+    "EPOCHS = 100\n",
     "BATCH_SIZE = 256\n",
     "\n",
     "# Store layers weight & bias\n",
@@ -347,16 +348,17 @@
     "\n",
     "    # Layer 4: Flatten, Pool & Concatenate Layers.\n",
     "    # TensorFlow v1.0.1: tf.concat(values, axis);\n",
-    "    try:\n",
-    "        flat = tf.concat((flatten(pool(conv1, k=4)),\n",
-    "                          flatten(pool(conv2, k=2)),\n",
-    "                          flatten(conv3)), 1, name=\"flat\") # Output 3584.\n",
-    "    # Prior TF versions: tf.concat(axis, values) :D\n",
-    "    except:\n",
-    "        flat = tf.concat(1, (flatten(pool(conv1, k=4)),\n",
-    "                          flatten(pool(conv2, k=2)),\n",
-    "                          flatten(conv3)), name=\"flat\") # Output 3584.\n",
-    "    flat = tf.nn.dropout(flat, keep_prob=keep_prob)\n",
+    "    with tf.variable_scope(\"flat\"):\n",
+    "        try:\n",
+    "            flat = tf.concat((flatten(pool(conv1, k=4)),\n",
+    "                              flatten(pool(conv2, k=2)),\n",
+    "                              flatten(conv3)), 1) # Output 3584.\n",
+    "        # Prior TF versions: tf.concat(axis, values) :D\n",
+    "        except:\n",
+    "            flat = tf.concat(1, (flatten(pool(conv1, k=4)),\n",
+    "                              flatten(pool(conv2, k=2)),\n",
+    "                              flatten(conv3))) # Output 3584.\n",
+    "        flat = tf.nn.dropout(flat, keep_prob=keep_prob)\n",
     "\n",
     "    # Layer 5: Fully Connected.\n",
     "    with tf.variable_scope(\"fc1\"):\n",
@@ -448,7 +450,7 @@
    "source": [
     "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1))\n",
     "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
-    "save_file = \"./dataset/model.ckpt\"\n",
+    "save_file = \"./dataset/model-100.ckpt\"\n",
     "saver = tf.train.Saver()\n",
     "\n",
     "def evaluate(X_data, y_labels):\n",
@@ -630,11 +632,11 @@
    "outputs": [],
    "source": [
     "def prediction_confidence(img, likelihoods, predictions):\n",
-    "    labels = [\"{:.6f}% : {}\".format(likelihoods[i]*100, class_labels[str(c)])\n",
+    "    labels = [\"{:.4f}% : {}\".format(likelihoods[i]*100, class_labels[str(c)])\n",
     "              for i, c in enumerate(predictions)]\n",
     "    y_pos = np.arange(len(labels))\n",
     "\n",
-    "    plt.figure(figsize=(4, 2))\n",
+    "    plt.figure(figsize=(4,2))\n",
     "    plt.subplot(121, xticks=[], yticks=[])\n",
     "    plt.imshow(img)\n",
     "    plt.subplot(122)\n",
@@ -715,6 +717,21 @@
     "            plt.imshow(activation[0,:,:, featuremap], interpolation=\"nearest\", vmin=activation_min, cmap=\"gray\")\n",
     "        else:\n",
     "            plt.imshow(activation[0,:,:, featuremap], interpolation=\"nearest\", cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for v in tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES, scope=\"conv1\"):\n",
+    "    print(v)\n",
+    "# with tf.Session() as sess:\n",
+    "#     sess.run(tf.global_variables_initializer())\n",
+    "#     sess.get_collection(\"relu\")"
    ]
   },
   {
