--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -93,11 +93,13 @@
    "outputs": [],
    "source": [
     "n_train = X_train.shape[0]\n",
+    "n_valid = X_valid.shape[0]\n",
     "n_test = X_test.shape[0]\n",
     "image_shape = X_train[0].shape\n",
     "n_classes = np.unique(y_train).shape[0]\n",
     "\n",
     "print(\"Number of training examples =\", n_train)\n",
+    "print(\"Number of validation examples =\", n_valid)\n",
     "print(\"Number of testing examples =\", n_test)\n",
     "print(\"Image data shape =\", image_shape)\n",
     "print(\"Number of classes =\", n_classes)"
@@ -302,7 +304,7 @@
    },
    "outputs": [],
    "source": [
-    "keep_prob = tf.placeholder(tf.float32)\n",
+    "keep_prob = tf.placeholder(tf.float32, name=\"keep_prob\")\n",
     "\n",
     "def Model(X_inputs):\n",
     "    # Layer 1: Convolutional. Input = 32x32x1.\n",
@@ -340,7 +342,7 @@
     "        fc1 = tf.nn.dropout(fc1, keep_prob=keep_prob)\n",
     "\n",
     "    # Layer 6: Fully Connected. Out.\n",
-    "    with tf.variable_scope(\"fc2\"):\n",
+    "    with tf.variable_scope(\"out\"):\n",
     "        return fully_connected(fc1, weight_var((1024,43)), bias_var(43), activate=False) # Output = 43."
    ]
   },
@@ -374,9 +376,9 @@
    },
    "outputs": [],
    "source": [
-    "X_vals = tf.placeholder(tf.float32, (None, 32, 32, 1))\n",
-    "y_vals = tf.placeholder(tf.int32, (None))\n",
-    "one_hot_y = tf.one_hot(y_vals, 43)"
+    "X_vals = tf.placeholder(tf.float32, (None, 32, 32, 1), name=\"X_vals\")\n",
+    "y_vals = tf.placeholder(tf.int32, (None), name=\"y_vals\")\n",
+    "one_hot_y = tf.one_hot(y_vals, n_classes)"
    ]
   },
   {
@@ -593,7 +595,7 @@
    },
    "outputs": [],
    "source": [
-    "for idx in range(n_preds):\n",
+    "for idx in range(n_signs):\n",
     "    prediction_confidence(sign_data[idx], probs[idx], pred_classes[idx])"
    ]
   },
@@ -636,41 +638,20 @@
    },
    "outputs": [],
    "source": [
-    "def outputFeatureMap(session, image_input, tf_activation, rows=6, cols=8, figsize=(15,25), activation_min=-1, activation_max=-1 ,plt_num=1):\n",
+    "def outputFeatureMap(session, image_input, activation, cols=8, rows=6, figsize=(1,1), interpolation=\"nearest\", plt_num=0):\n",
     "    \"\"\"\n",
     "    image_input:\n",
     "        the test image being fed into the network to produce the feature maps\n",
     "    tf_activation:\n",
     "        should be a tf variable name used during your training procedure that\n",
     "        represents the calculated state of a specific weight layer\n",
-    "    activation_min/max:\n",
-    "        can be used to view the activation contrast in more detail, by default\n",
-    "        matplot sets min and max to the actual min and max values of the output\n",
-    "    plt_num:\n",
-    "        used to plot out multiple different weight feature map sets on the same block,\n",
-    "        just extend the plt number for each new feature map entry\n",
     "    \"\"\"\n",
-    "    activation = tf_activation.eval(session=session)\n",
-    "    featuremaps = activation.shape[-1]\n",
-    "    assert rows*cols == featuremaps, \"expected {}*{} to equal {}\".format(rows, cols, featuremaps)\n",
-    "    \n",
-    "    print(\"=\" * 75)\n",
-    "    print(tf_activation)\n",
-    "    print()\n",
-    "\n",
-    "    plt.figure(plt_num, figsize=figsize)\n",
-    "    for featuremap in range(featuremaps):\n",
-    "        plt.subplot(rows, cols, featuremap+1)\n",
-    "        plt.axis(\"off\")\n",
-    "        if activation_min != -1 & activation_max != -1:\n",
-    "            plt.imshow(activation[0,:,:,featuremap], interpolation=\"nearest\", vmin=activation_min, vmax=activation_max, cmap=\"gray\")\n",
-    "        elif activation_max != -1:\n",
-    "            plt.imshow(activation[0,:,:,featuremap], interpolation=\"nearest\", vmax=activation_max, cmap=\"gray\")\n",
-    "        elif activation_min !=-1:\n",
-    "            plt.imshow(activation[0,:,:,featuremap], interpolation=\"nearest\", vmin=activation_min, cmap=\"gray\")\n",
-    "        else:\n",
-    "            plt.imshow(activation[0,:,:,featuremap], interpolation=\"nearest\")\n",
-    "    plt.show()"
+    "    n_featuremaps = activation.shape[-1]\n",
+    "    assert rows*cols == n_featuremaps, \"expected {}*{} to equal {}\".format(rows, cols, n_featuremaps)\n",
+    "    fig = plt.figure(plt_num+1, figsize=figsize)\n",
+    "    for fm in range(n_featuremaps):\n",
+    "        plt.subplot(rows, cols, fm+1, xticks=[], yticks=[])\n",
+    "        plt.imshow(activation[:,:,:,fm].squeeze(), interpolation=interpolation, cmap=\"gray\")"
    ]
   },
   {
@@ -681,19 +662,26 @@
    },
    "outputs": [],
    "source": [
-    "conv1_weights,_ = tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES, scope=\"conv1_1\")\n",
-    "conv2_weights,_ = tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES, scope=\"conv2_1\")\n",
-    "conv3_weights,_ = tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES, scope=\"conv3_1\")\n",
-    "\n",
+    "conv1_weights,_ = tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES, scope=\"conv1\")[:2]\n",
     "sign_img = sign_data_process[0]\n",
+    "\n",
+    "print(conv1_weights)\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    saver.restore(sess, SAVE_FILE)\n",
-    "    outputFeatureMap(sess, sign_img, conv1_weights, rows=4, cols=8, figsize=(5,5))\n",
-    "    outputFeatureMap(sess, sign_img, conv2_weights, rows=16, cols=4, plt_num=2, figsize=(5,6))\n",
-    "    outputFeatureMap(sess, sign_img, conv3_weights, rows=32, cols=4, plt_num=3, figsize=(9,9))"
+    "    conv1 = sess.run(conv1_weights, feed_dict={X_vals: [sign_img]})\n",
+    "    outputFeatureMap(sess, sign_img, conv1, cols=8, rows=4, figsize=(8,4), plt_num=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -714,10 +702,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.2"
   }
  },
  "nbformat": 4,
