--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -1429,14 +1429,16 @@
     "\n",
     "def plot_confusion_matrix(confusion_matrix):\n",
     "    plt.figure(figsize=(15,15))\n",
-    "    plt.imshow(confusion_matrix, interpolation='nearest', cmap=plt.cm.Blues)\n",
+    "    plt.imshow(confusion_matrix, interpolation=\"nearest\", cmap=plt.cm.Blues)\n",
     "\n",
     "    thresh = confusion_matrix.max() / 2.\n",
     "    rows, cols = confusion_matrix.shape\n",
     "    for i, j in itertools.product(range(rows), range(cols)):\n",
-    "        plt.text(j, i, confusion_matrix[i,j] if confusion_matrix[i,j] > 0 else \"\",\n",
-    "                 size=\"smaller\", horizontalalignment=\"center\", verticalalignment=\"center\",\n",
-    "                 color=\"white\" if confusion_matrix[i, j] > thresh else \"black\")\n",
+    "        count = confusion_matrix[i,j]\n",
+    "        if count > 0:\n",
+    "            plt.text(j, i, count, size=\"smaller\",\n",
+    "                     horizontalalignment=\"center\", verticalalignment=\"center\",\n",
+    "                     color=\"white\" if count > thresh else \"black\")\n",
     "\n",
     "    plt.title(\"Confusion Matrix\")\n",
     "    tick_marks = np.arange(confusion_matrix.shape[0])\n",
@@ -1822,10 +1824,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.2"
   }
  },
  "nbformat": 4,
