--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -1381,7 +1381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate the Model"
+    "### Evaluate the Model"
    ]
   },
   {
@@ -1414,7 +1414,7 @@
     "### Confusion Matrix\n",
     "\n",
     "Compute the confusion matrix from predictions made by the model on the test set compared to the labels.\n",
-    "The matrix columns represent the prediction labels and the rows represent the true labels. The diagonal from the top left to the bottom right represents the agreement of the prediction and the ground truth. Any incorrect values will fall outside that diagonal."
+    "The matrix columns represent the prediction labels and the rows represent the true labels. The diagonal from the top left to the bottom right represents the agreement of the prediction and the ground truth."
    ]
   },
   {
